// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Favor adding 1`] = `
.c1 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c1 .type__value-container,
.c1 .type__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c1 .type__single-value {
  color: rgb(0,130,155);
}

.c1 .type__indicator-separator {
  background-color: rgb(0,130,155);
}

.c1 .type__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c1 .type__control,
.c1 .type__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c1 .type__control:hover,
.c1 .type__menu:hover {
  border-color: rgb(65,178,180);
}

.c1 .type__option {
  background-color: transparent;
  cursor: pointer;
}

.c1 .type__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .type__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .type__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c1 .type__control--is-disabled {
  opacity: 0.7;
}

.c2 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c2 .faction__value-container,
.c2 .faction__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c2 .faction__single-value {
  color: rgb(0,130,155);
}

.c2 .faction__indicator-separator {
  background-color: rgb(0,130,155);
}

.c2 .faction__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c2 .faction__control,
.c2 .faction__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c2 .faction__control:hover,
.c2 .faction__menu:hover {
  border-color: rgb(65,178,180);
}

.c2 .faction__option {
  background-color: transparent;
  cursor: pointer;
}

.c2 .faction__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .faction__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .faction__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c2 .faction__control--is-disabled {
  opacity: 0.7;
}

.c4 {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000;
}

.c5 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c5:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 div,
.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

.c3 {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
  grid-column: 1/3;
  z-index: auto;
}

.c3 svg {
  font-size: 20px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 3fr 10fr 1fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 div,
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: 1fr;
    grid-column: 3;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="new-favor"
>
  <label
    for="type"
  >
    <div
      class="css-1pcexqc-container c1"
      id="type"
    >
      <div
        class="css-bg1rzq-control type__control"
      >
        <div
          class="css-1hwfws3 type__value-container type__value-container--has-value"
        >
          <div
            class="css-dvua67-singleValue type__single-value"
          >
            Small
          </div>
          <div
            class="css-1g6gooi"
          >
            <div
              class="type__input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-2-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1wy0on6 type__indicators"
        >
          <span
            class="css-bgvzuu-indicatorSeparator type__indicator-separator"
          />
          <div
            aria-hidden="true"
            class="css-16pqwjk-indicatorContainer type__indicator type__dropdown-indicator"
          >
            <svg
              aria-hidden="true"
              class="css-19bqh2r"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="type"
        type="hidden"
        value="small"
      />
    </div>
  </label>
  <label
    for="faction"
  >
    <div
      class="css-1pcexqc-container c2"
      id="faction"
    >
      <div
        class="css-bg1rzq-control faction__control"
      >
        <div
          class="css-1hwfws3 faction__value-container faction__value-container--has-value"
        >
          <div
            class="css-dvua67-singleValue faction__single-value"
          >
            Jinteki
          </div>
          <div
            class="css-1g6gooi"
          >
            <div
              class="faction__input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-3-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1wy0on6 faction__indicators"
        >
          <span
            class="css-bgvzuu-indicatorSeparator faction__indicator-separator"
          />
          <div
            aria-hidden="true"
            class="css-16pqwjk-indicatorContainer faction__indicator faction__dropdown-indicator"
          >
            <svg
              aria-hidden="true"
              class="css-19bqh2r"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="faction"
        type="hidden"
        value="jinteki"
      />
    </div>
  </label>
  <label
    for="description"
  >
    <textarea
      name="description"
      placeholder="Add description..."
      rows="4"
    />
  </label>
  <div
    class="c3 c4"
    data-testid="form-buttons"
  >
    <button
      class="c5"
      data-testid="cancel"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <button
      class="c5"
      data-testid="submit"
      type="submit"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </button>
  </div>
</form>
`;

exports[`Storyshots Components/Favor completed 1`] = `
.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 div,
.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 3fr 10fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 div,
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="favor-2"
>
  <h4
    data-testid="favor-2-type"
  >
    Small
  </h4>
  <h4
    data-testid="favor-2-faction"
  >
    NAPD
  </h4>
  <div
    data-testid="favor-2-description"
  >
    Aditi's Union membership means she can call on other members of the Union for occasional help (see Union Member talent).
  </div>
</form>
`;

exports[`Storyshots Components/Favor default 1`] = `
.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 div,
.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 3fr 10fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 div,
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="favor-1"
>
  <h4
    data-testid="favor-1-type"
  >
    Big
  </h4>
  <h4
    data-testid="favor-1-faction"
  >
    Orgcrime
  </h4>
  <div
    data-testid="favor-1-description"
  >
    Aditi owes a big favor to Tián Shun, a mid-level boss in the 14K outfit. Tián helped Aditi establish her life in the Base De Cayambe and set up a fake ID for her that registers her as human. In return, he occasionally asks her to review the “books” from his part of the organization, and once had her patch up one of his wounded enforcers. He has made it clear that he expects more such aid going forward.
  </div>
</form>
`;
